# centaur

./: .gitignore  AGENTS.md  Justfile  LICENSE  index.yaml  pnpm-lock.yaml  pnpm-workspace.yaml
.agents/skills/company-context/: SKILL.md
.agents/skills/creating-tools/: SKILL.md
.agents/skills/qa/: SKILL.md
.github/: UPSTREAM_ANCESTRY_BRIDGE.md  rollback-bridge-reviewed-forward-commit
.github/scripts/: audit_workflow_trust.py  check-migration-order.sh  check-rollback-bridge-workflows.sh  promote_fineas_infra.py  resolve-runnable-image-digest.sh  test-probe-rollback-agent-image.sh  test-resolve-runnable-image-digest.sh  test-rollback-bridge-publication-trigger.sh  test-verify-registry-tag-absent.sh  test-verify-reviewed-image-release.sh  test-verify-reviewed-rollback-release.sh  verify-registry-tag-absent.sh  verify-reviewed-image-release.sh  verify-reviewed-rollback-release.sh
.github/workflows/: ci.yml  console-ci.yml  docs-deploy.yml  docs.yml  publish-images.yml  release-chart-publish.yml  release-chart.yml  upstream-pr-verify.yml  upstream-sync.yml  validate-images.yml
centaur_sdk/: __init__.py  tool_sdk.py
centaur_sdk/tests/: test_tool_sdk.py
contrib/chart/: Chart.yaml  values.schema.json  values.yaml
contrib/chart/templates/: _helpers.tpl  apirs.yaml  console-worker.yaml  console.yaml  ingress.yaml  networkpolicy.yaml  slackbotv2.yaml  token-broker.yaml  workloads.yaml
contrib/chart/tests/: test_overlay_image_compat.sh
contrib/scripts/: bootstrap-k8s-secrets.sh
crates/harness-server/: Cargo.toml
crates/harness-server/src/: claude.rs  codex.rs  main.rs  server.rs
crates/harness-server/tests/: app_server_stdio.rs
docs/: UPSTREAM_SYNC_20260711.md  UPSTREAM_SYNC_20260719.md
docs/pages/: _root.css  deploying-in-production.mdx
docs/pages/extend/: acme-example.mdx  workflows-v2.mdx  workflows.mdx
harness/claude/: settings.json
harness/codex/: config.toml
patches/: @chat-adapter__slack@4.31.0.patch  chat@4.31.0.patch
scripts/: mirror-prod-threads-snapshot.sh  probe-agent-harness-image.sh  probe-rollback-agent-image.sh
services/api/: pyproject.toml
services/api-rs/: Cargo.toml
services/console/: README.md
services/iron-proxy/: Dockerfile  iron-proxy.yaml
services/sandbox/: Dockerfile  SYSTEM_PROMPT.md  configure_codex_config.py  entrypoint.sh  git_commit_verified.py  install_tool_shims.py  select_overlay_prompt.sh  test_configure_codex_config.py  test_git_branch.py  test_git_commit_verified.py  test_install_tool_shims.py  test_runtime_version_floors.py  test_select_overlay_prompt.py  test_system_prompt.py
services/workflow-python/: workflow_host.py
tools/productivity/company_context/: cli.py  client.py  pyproject.toml
tools/productivity/company_context/tests/: test_client.py
tools/research/investmemos/: client.py  pyproject.toml
tools/research/preqin/: .env.example  pyproject.toml
tools/research/preqin/centaur_tool_preqin/: cli.py  client.py
tools/research/preqin/tests/: test_client.py
workflows/: company_context_documents.py  github_issue_triage.py  muesli_meeting_ingest.py
workflows/gsuite/: drive.py  drive_sync.py
workflows/slack/: archive_import.py
workflows/tests/: test_google_drive_sync_folders.py
(+218 files in other folders)
