[project]
name = "investmemos"
description = "Postgres-backed investment memo search and retrieval"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "asyncpg>=0.30.0",
]

[project.scripts]
investmemos = "centaur_tool_investmemos.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "centaur_tool_investmemos"

[tool.centaur]
module = "client.py"
secrets = [
    {type = "pg_dsn", name = "CENTAUR_POSTGRES_DSN", secret_ref = "DATABASE_URL", database = "ai_v2", role = "centaur_readonly"},
]
